--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Ventas Exclusivas</title>
 </head>
 <body>
-    
+    <a href="https://api.whatsapp.com/send?phone=938397743">Ir a mi WhatsApp</a>
 </body>
 </html>
