--- a/index.html
+++ b/index.html
@@ -1,12 +1,279 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ventas Exclusivas</title>
+
+    <link rel="stylesheet" href="style/bootstrap.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
-    <a href="https://api.whatsapp.com/send?phone=51938397743">Ir a mi WhatsApp</a>
-    <a href="https://m.me/victor.ve21">Envíanos un mensaje de Facebook</a>
+
+    <!-- Navigation -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-red fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                VENTAS EXCLUSIVAS</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span> MENÚ
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Ropa de Mujer
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                            <a class="dropdown-item" href="index.html">Categoria 1</a>
+                            <a class="dropdown-item" href="index.html">Categoria 2</a>
+                            <a class="dropdown-item" href="index.html">Categoria 3 </a>
+                            <a class="dropdown-item" href="index.html">Categoria 4 </a>
+                            <a class="dropdown-item" href="index.html">Categoria 5</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Ropa de Hombre
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                            <a class="dropdown-item" href="index.html">Categoria 1</a>
+                            <a class="dropdown-item" href="index.html">Categoria 2</a>
+                            <a class="dropdown-item" href="index.html">Categoria 3 </a>
+                            <a class="dropdown-item" href="index.html">Categoria 4 </a>
+                            <a class="dropdown-item" href="index.html">Categoria 5</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Ropa de Niños
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                            <a class="dropdown-item" href="index.html">Categoria 1</a>
+                            <a class="dropdown-item" href="index.html">Categoria 2</a>
+                            <a class="dropdown-item" href="index.html">Categoria 3 </a>
+                            <a class="dropdown-item" href="index.html">Categoria 4 </a>
+                            <a class="dropdown-item" href="index.html">Categoria 5</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+
+        <div class="row">
+            <!-- Page Heading -->
+            <div class="col-lg-6">
+                <h1 class="my-4">Ropa de Mujer</h1>
+            </div>
+            <div class="col-lg-6">
+                <a href="mujer.html" type="button" class="btn btn-outline-danger my-4" id="vertodo">Ver Todo</a>
+            </div>       
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <!-- /.row -->
+
+        <!-- title de ropa de hombre-->
+        <div class="row">
+            <!-- Page Heading -->
+            <div class="col-lg-6">
+                <h1 class="my-4">Ropa de Hombre</h1>
+            </div>
+            <div class="col-lg-6">
+                <button type="button" class="btn btn-outline-danger my-4" id="vertodo">Ver Todo</button>
+            </div>
+
+        </div>
+        <!--fin title-->
+
+
+        <!-- /row-->
+
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+        <!-- title de ropa de niños-->
+        <div class="row">
+            <!-- Page Heading -->
+            <div class="col-lg-6">
+                <h1 class="my-4">Ropa de Niños</h1>
+            </div>
+            <div class="col-lg-6">
+                <button type="button" class="btn btn-outline-danger my-4" id="vertodo">Ver Todo</button>
+            </div>
+
+        </div>
+        <!--fin title-->
+
+
+        <!-- /row-->
+
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title" >
+                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        </h4>
+                        <h5>S/. 65</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.container -->
+    <br><br>
+
+    <!-- Footer -->
+    <footer class="py-3 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">VENTAS EXCLUSIVAS 2020</p>
+        </div>
+        <!-- /.container -->
+    </footer>
+
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
