--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="style/bootstrap.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="font.css">
 </head>
 
 <body>
@@ -81,15 +82,16 @@
             </div>
             <div class="col-lg-6">
                 <a href="mujer.html" type="button" class="btn btn-outline-danger my-4" id="vertodo">Ver Todo</a>
-            </div>       
+            </div>
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -99,8 +101,9 @@
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -110,8 +113,9 @@
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -121,8 +125,9 @@
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -139,7 +144,7 @@
                 <h1 class="my-4">Ropa de Hombre</h1>
             </div>
             <div class="col-lg-6">
-                <button type="button" class="btn btn-outline-danger my-4" id="vertodo">Ver Todo</button>
+                <a href="hombre.html" type="button" class="btn btn-outline-danger my-4" id="vertodo">Ver Todo</a>
             </div>
 
         </div>
@@ -153,8 +158,9 @@
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -164,8 +170,9 @@
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -175,8 +182,9 @@
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -186,8 +194,9 @@
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -203,7 +212,7 @@
                 <h1 class="my-4">Ropa de Niños</h1>
             </div>
             <div class="col-lg-6">
-                <button type="button" class="btn btn-outline-danger my-4" id="vertodo">Ver Todo</button>
+                <a href="niños.html" type="button" class="btn btn-outline-danger my-4" id="vertodo">Ver Todo</a>
             </div>
 
         </div>
@@ -217,8 +226,9 @@
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -228,8 +238,9 @@
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -239,8 +250,9 @@
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -250,8 +262,9 @@
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body" style="text-align: center;">
-                        <h4 class="card-title" >
-                            <a href="#" aria-hidden="true" tabindex="1" style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                        <h4 class="card-title">
+                            <a href="#" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
                         </h4>
                         <h5>S/. 65</h5>
                     </div>
@@ -261,6 +274,14 @@
     </div>
     <!-- /.container -->
     <br><br>
+
+    <div id="social">
+        <ul id="ul">
+            <li><a id="a" href="http://www.facebook.com/falconmasters" target="_blank" class="icon-facebook"></a></li>
+            <li><a id="a" href="http://www.twitter.com/falconmasters" target="_blank" class="icon-facebook2"></a></li>
+            <li><a id="a" href="http://www.googleplus.com/falconmasters" target="_blank" class="icon-whatsapp"></a></li>
+        </ul>
+    </div>
 
     <!-- Footer -->
     <footer class="py-3 bg-dark">
