--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
 
     <div id="social">
         <ul id="ul">
-            <li><a id="a" href="http://www.facebook.com/falconmasters" target="_blank" class="icon-facebook"></a></li>
-            <li><a id="a" href="http://www.twitter.com/falconmasters" target="_blank" class="icon-facebook2"></a></li>
-            <li><a id="a" href="http://www.googleplus.com/falconmasters" target="_blank" class="icon-whatsapp"></a></li>
+            <li><a id="a" href="http://www.facebook.com" target="_blank" class="icon-facebook"></a></li>
+            <li><a id="a" href="https://m.me/victor.ve21" target="_blank" class="icon-facebook2"></a></li>
+            <li><a id="a" href="https://api.whatsapp.com/send?phone=51938397743" target="_blank" class="icon-whatsapp"></a></li>
         </ul>
     </div>
 
