--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ventas Exclusivas</title>
 
+    <link rel="" href="https://icomoon.io/app/#/select/font">
     <link rel="stylesheet" href="style/bootstrap.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="font.css">
@@ -278,7 +279,7 @@
     <div id="social">
         <ul id="ul">
             <li><a id="a" href="http://www.facebook.com" target="_blank" class="icon-facebook"></a></li>
-            <li><a id="a" href="https://m.me/victor.ve21" target="_blank" class="icon-facebook2"></a></li>
+            <li><a id="a" href="https://m.me/victor.ve21" target="_blank" class="icon-messenger"></a></li>
             <li><a id="a" href="https://api.whatsapp.com/send?phone=51938397743" target="_blank" class="icon-whatsapp"></a></li>
         </ul>
     </div>
