--- a/hombre.html
+++ b/hombre.html
@@ -123,8 +123,9 @@
                 <a id="a" href="https://m.me/victor.ve21" target="_blank" class="icon-messenger btn btn-primary"
                     style="background-color: blue;">
                     Messenger</a>
-                <a id="a" href="https://api.whatsapp.com/send?phone=51938397743" target="_blank"
-                    class="icon-whatsapp btn btn-success" style="background-color: green;"> WhatsApp</a>
+                <a id="a"
+                    href="https://api.whatsapp.com/send?phone=51938397743&amp;text=Hola!&nbsp;me&nbsp;pueden&nbsp;dar&nbsp;más&nbsp;información?"" target="
+                    _blank" class="icon-whatsapp btn btn-success" style="background-color: green;"> WhatsApp</a>
             </div>
         </div>
         <!-- /.row -->
@@ -162,7 +163,7 @@
         </div>
         <!-- /.row -->
         <div class="fb-comments" data-href="https://victorvera21.github.io/ventas-exclusivas/hombre.html"
-            data-numposts="5" data-width=""></div>
+            data-numposts="5" data-width="" data-colorscheme="light" data-order-by="reverse_time"></div>
 
     </div>
     <!-- /.container -->
