--- a/hombre.html
+++ b/hombre.html
@@ -120,7 +120,7 @@
                     <label style="width: 40px; height: 40px; background-color: black; border-radius: 100%;"></label>
                 </ul>
                 <h3 class="my-3">Haz tu pedido </h3>
-                <a id="a" href="https://m.me/victor.ve21" target="_blank" class="icon-messenger btn btn-primary"
+                <a id="a" href="https://m.me/victor.ve21&amp;text=Hola!&nbsp;me&nbsp;pueden&nbsp;dar&nbsp;más&nbsp;información?" target="_blank" class="icon-messenger btn btn-primary"
                     style="background-color: blue;">
                     Messenger</a>
                 <a id="a"
