--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Contact</a>
+                        <a class="nav-link" href="prueba.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -82,19 +82,18 @@
                 <h1 class="my-4">Ropa de Mujer</h1>
             </div>
             <div class="col-lg-6">
-                <a href="mujer.html" type="button" class="btn btn-outline-danger my-4" id="vertodo">Ver Todo</a>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <a href="joggermujer.html"><img class="card-img-top" src="assent/joggermujer1.png" alt=""></a>
                     <div class="card-body" style="text-align: center;">
                         <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
-                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                            <a href="joggermujer.html" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Jogger </a>
                         </h4>
-                        <h5>S/. 65</h5>
+                        <h5>S/. 35</h5>
                     </div>
                 </div>
             </div>
@@ -280,7 +279,8 @@
         <ul id="ul">
             <li><a id="a" href="http://www.facebook.com" target="_blank" class="icon-facebook"></a></li>
             <li><a id="a" href="https://m.me/victor.ve21" target="_blank" class="icon-messenger"></a></li>
-            <li><a id="a" href="https://api.whatsapp.com/send?phone=51938397743" target="_blank" class="icon-whatsapp"></a></li>
+            <li><a id="a" href="https://api.whatsapp.com/send?phone=51938397743" target="_blank"
+                    class="icon-whatsapp"></a></li>
         </ul>
     </div>
 
