--- a/joggermujer.html
+++ b/joggermujer.html
@@ -178,7 +178,7 @@
         <div class="row">
             <div class="col-md-7 col-sm-7 mb-4">
                 <div class="fb-comments" data-href="https://victorvera21.github.io/ventas-exclusivas/hombre.html"
-                    data-numposts="5" data-width="" data-colorscheme="light" data-order-by="reverse_time"></div>
+                    data-numposts="5" data-width="400" data-colorscheme="light" data-order-by="reverse_time"></div>
 
             </div>
             <div class="col-md-5 col-sm-5 mb-4">
