--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <a href="poleramujer.html"><img class="card-img-top" src="assent/poleramujer1.png" alt=""></a>
                     <div class="card-body" style="text-align: center;">
                         <h4 class="card-title">
-                            <a href="#" aria-hidden="true" tabindex="1"
-                                style="color: black; text-transform: uppercase; float: none;">Jogger</a>
+                            <a href="poleramujer.html" aria-hidden="true" tabindex="1"
+                                style="color: black; text-transform: uppercase; float: none;">Polera</a>
                         </h4>
-                        <h5>S/. 65</h5>
+                        <h5>S/. 45</h5>
                     </div>
                 </div>
             </div>
