--- a/poleramujer.html
+++ b/poleramujer.html
@@ -89,11 +89,11 @@
         <!-- Portfolio Item Row -->
         <div class="row">
 
-            <div class="col-md-7">
-                <img class="img-fluid" src="assent/joggermujerazulnoche.png" alt="">
+            <div class="col-md-8">
+                <img class="img-fluid" src="assent/poleramujer.png" alt="">
             </div>
 
-            <div class="col-md-5">
+            <div class="col-md-4">
                 <br>
                 <h2 style="text-align: center;">JOOGER MUJER</h2>
                 <hr>
